--- a/p3dx_config/config/p3dx_base_local_planner_params.yaml
+++ b/p3dx_config/config/p3dx_base_local_planner_params.yaml
@@ -1,6 +1,6 @@
 controller_frequency: 10.0
 TrajectoryPlannerROS:
-  max_vel_x: 0.30
+  max_vel_x: 0.50
   min_vel_x: 0.10
   max_rotational_vel: 1.5
   min_in_place_rotational_vel: 1.0
@@ -9,11 +9,11 @@ TrajectoryPlannerROS:
   acc_lim_y: 0.50
 
   holonomic_robot: false
-  yaw_goal_tolerance: 0.78
-  xy_goal_tolerance: 0.15
+  yaw_goal_tolerance: 0.8
+  xy_goal_tolerance: 0.3
   goal_distance_bias: 0.8
   path_distance_bias: 0.6
-  sim_time: 1.5
+
   heading_lookahead: 0.325
   oscillation_reset_dist: 0.05
 
@@ -21,3 +21,6 @@ TrajectoryPlannerROS:
   vtheta_samples: 20
   dwa: false
 
+  meter_scoring: true
+  recovery_behavior_enabled: false
+  clearing_rotation_allowed: false
